--- a/components/menu/menu.css
+++ b/components/menu/menu.css
@@ -3,7 +3,7 @@
 }
 
 .menu__title {
-    background-image: url(https://learn.javascript.ru/img/sitetoolbar__logo_small.svg);
+    background-image: url(http://pa1.narvii.com/6238/66b7f158f6a3290bd2f6ac1579b676ede8be9d31_128.gif);
     background-position: 0px -9px;
     background-repeat: no-repeat;
 
