--- a/components/old/index.html
+++ b/components/old/index.html
@@ -5,7 +5,9 @@
         <!--
         <meta charset="utf-8" />
         -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
         <link rel="stylesheet" href="components/app/app.css">
         <link rel="stylesheet" href="components/form/form.css">
         <link rel="stylesheet" href="components/menu/menu.css">
@@ -18,7 +20,10 @@
         </div>
 
         <script src="components/form/form.js"></script>
+
+        <script src="components/menu/menu.pug.js"></script>
         <script src="components/menu/menu.js"></script>
+
         <script src="components/app/app.js"></script>
 
         <script>
