--- a/components/form/form.css
+++ b/components/form/form.css
@@ -1,9 +1,14 @@
-input {
+.form fieldset{
+    border-width: 1px;
+    border-color: black;
+}
+
+.form__input {
     width: 200px;
     height: 24px;
     font: caption;
-    margin: 1px;
-    padding: 1px;
+    border-width: 1px;
+    border-color: black;
 }
 
 .form__btn {
