--- a/components/form/form.css
+++ b/components/form/form.css
@@ -1,22 +1,40 @@
 .form__form fieldset{
     text-align: left;
     border-width: 1px;
+    border-radius: 4px;
     border-color: black;
+    vertical-align: center;
 }
 
-.form__input {
-    width: 40%;
+.form__input-url {
+    width: 43%;
     height: 24px;
     font: caption;
     border-width: 1px;
+    border-radius: 4px;
     border-color: black;
+    margin-top: 4px;
+    vertical-align: center;
+}
+
+.form__input-date {
+    width: 43%;
+    height: 26px;
+    font: caption;
+    border-width: 1px;
+    border-radius: 4px;
+    border-color: black;
+    margin-top: 4px;
+    vertical-align: center;
 }
 
 .form__btn {
     float: right;
     width: 10%;
-    height: 24px;
+    height: 28px;
     border-width: 1px;
+    border-radius: 4px;
     border-color: black;
-    margin-top: 3px;
+    margin-top: 4px;
+    vertical-align: center;
 }
