--- a/T1.pug
+++ b/T1.pug
@@ -3,7 +3,7 @@ li.menu__item(data-index=index)
         data-action='pick'
     )= item.day
     a.menu-link(
-        href=item.href'&nbsp;-&nbsp'
+        href=item.href+'&nbsp;-&nbsp'
         data-action='pick'
     )= item.anchor
     button.close.menu__remove-button(
