--- a/components/menu/menuItem.pug
+++ b/components/menu/menuItem.pug
@@ -1,7 +1,8 @@
 li.menu__item(data-index=index)
     span.menu__day(
         data-action='pick'
-    )= item.day | '-'
+    )= item.day
+        span &#160;-&#160;
     a.menu__link(
         href=item.href
         data-action='pick'
