--- a/components/app/app.css
+++ b/components/app/app.css
@@ -1,4 +1,6 @@
  .js-app {
-    min-height: 800px;
+    min-height: 700px;
     background-image: url(../img/bg_02.png);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
