--- a/components/form/form.css
+++ b/components/form/form.css
@@ -1,7 +1,7 @@
 .js-form {
-    width: 96%;
+    width: 98%;
     margin: auto;
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 
@@ -9,38 +9,39 @@
     text-align: left;
     border-width: 0px;
     vertical-align: center;
+    border-width: 1px;
 }
 
 .form__input-date {
-    width: 12%;
+    width: 14%;
     height: 36px;
     font: caption;
     border-width: 1px;
     border-radius: 4px;
     border-color: black;
-    margin-top: 9px;
+    margin-top: 6px;
     vertical-align: center;
 }
 
 .form__input-text {
-    width: 50%;
+    width: 40%;
     height: 34px;
     font: caption;
     border-width: 1px;
     border-radius: 4px;
     border-color: black;
-    margin-top: 9px;
+    margin-top: 6px;
     vertical-align: center;
 }
 
 .form__input-url {
-    width: 20%;
+    width: 25%;
     height: 34px;
     font: caption;
     border-width: 1px;
     border-radius: 4px;
     border-color: black;
-    margin-top: 9px;
+    margin-top: 6px;
     vertical-align: center;
 }
 
@@ -50,11 +51,11 @@
     background-repeat: no-repeat;
     background-color: transparent;
     float: right;
-    width: 200px;
-    height: 50px;
+    width: 128px;
+    height: 34px;
     border-width: 0px;
-    margin-top: 4px;
-    margin-right: -16px;
+    margin-top: 10px;
+    margin-right: 16px;
     vertical-align: center;
 }
 
