--- a/components/form/form.css
+++ b/components/form/form.css
@@ -51,11 +51,12 @@
     background-repeat: no-repeat;
     background-color: transparent;
     float: right;
-    width: 128px;
-    height: 34px;
+    width: 14%;
+    height: 38px;
+    font: caption;
     border-width: 0px;
-    margin-top: 10px;
-    margin-right: 16px;
+    margin-top: 7px;
+    margin-right: 15px;
     vertical-align: center;
 }
 
